tests/baselines/reference/classDeclarationBlockScoping1.errors.txt
tests/cases/compiler/classDeclarationBlockScoping1.ts(5,11): error TS9004: 'class' declarations are only supported directly inside a module or as a top level declaration.


==== tests/cases/compiler/classDeclarationBlockScoping1.ts (1 errors) ====
    class C {
    }
    
    {
        class C {
              ~
!!! error TS9004: 'class' declarations are only supported directly inside a module or as a top level declaration.
        }
    }